--- a/app/globals.css
+++ b/app/globals.css
@@ -203,6 +203,10 @@ button.nav-btn {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.py-05 {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
 .pb-1-5 {
   padding-bottom: 1.5rem;
 }
