--- a/app/globals.css
+++ b/app/globals.css
@@ -171,9 +171,9 @@ button.nav-btn {
 }
 
 .top-bar-nav {
-  margin: .5rem;
+  margin: 1rem;
   padding: 1rem;
-  border-radius: .5rem;
+  border-radius: .75rem;
   -moz-box-shadow: 5px 5px 22px -15px rgba(0, 0, 0, 0.8);
   -webkit-box-shadow: 5px 5px 22px -15px rgba(0, 0, 0, 0.8);
   box-shadow: 5px 5px 22px -15px rgba(0, 0, 0, 0.8);
@@ -207,8 +207,19 @@ button.nav-btn {
   padding-top: .5rem;
   padding-bottom: .5rem;
 }
+.pt-05 {
+  padding-top: .5rem;
+}
+.pb-1 {
+  padding-bottom: 1rem;
+}
 .pb-1-5 {
   padding-bottom: 1.5rem;
+}
+
+/* ------------------------------ */
+.block {
+  display: block;
 }
 
 /* ------------------------------ */
@@ -224,6 +235,9 @@ button.nav-btn {
 }
 .align-center {
   align-items: center;
+}
+.align-end {
+  align-items: flex-end;
 }
 .justify-start {
   justify-content: flex-start;
