Update dashboard grid padding

--- a/app/[id]/dashboard/dashboard.module.css
+++ b/app/[id]/dashboard/dashboard.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: .5rem;
-    padding: .5rem;
+    padding: 1rem;
 }
 
 #analytics {
