--- a/app/globals.css
+++ b/app/globals.css
@@ -298,6 +298,10 @@ button.nav-btn {
   padding-left: var(--m);
   padding-right: var(--m);
 }
+.px-xl {
+  padding-left: var(--xl);
+  padding-right: var(--xl);
+}
 /* ------------------------------ */
 .py-2 {
   padding-top: 2rem;
