--- a/app/globals.css
+++ b/app/globals.css
@@ -107,10 +107,97 @@ a {
 }
 
 button {
-  border: none;
-  outline: none;
-  cursor: pointer;
+  border-radius: var(--border-radius);
+  border: 2px solid transparent;
+  padding: .4em 1.2em;
   font-size: var(--font-s);
+  font-weight: 700;
+  font-family: inherit;
+  letter-spacing: 1px;
+  cursor: pointer;
+  text-transform: capitalize;
+  transition: all 150ms ease-out;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+/* =========== BUTTON =========== */
+button.btn-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--s);
+}
+
+button.action,
+button.btn-icon {
+  min-width: 140px !important;
+  min-height: 40px;
+  color: var(--primary-dark);
+  background-color: var(--action);
+}
+
+button.action:disabled,
+button.btn-icon:disabled {
+  cursor: unset;
+  pointer-events: none;
+}
+
+button.action:hover,
+button.btn-icon:hover {
+  background-color: var(--white);
+  border-color: var(--action);
+}
+
+/* =========== button - TRANSPARENT =========== */
+button.action.transparent,
+button.btn-icon.transparent {
+  color: var(--primary-dark);
+  background: transparent;
+}
+
+button.action.transparent:hover,
+button.btn-icon.transparent:hover {
+  color: var(--white);
+  background-color: var(--primary);
+  border-color: transparent;
+}
+
+button.action.transparent:hover svg,
+button.btn-icon.transparent:hover svg {
+  fill: var(--white);
+}
+
+/* =========== button - DANGER =========== */
+button.action.danger,
+button.btn-icon.danger {
+  color: var(--white);
+  background-color: var(--danger);
+}
+
+button.action.danger:hover,
+button.btn-icon.danger:hover {
+  color: var(--danger);
+  border-color: var(--danger);
+  background: transparent;
+}
+
+button.action.danger:hover svg,
+button.btn-icon.danger:hover svg {
+  fill: var(--danger);
+}
+
+/* =========== button - TRANSPARENT DANGER =========== */
+button.btn-icon.transparent-danger {
+  color: var(--danger);
+  background: transparent;
+}
+
+button.btn-icon.transparent-danger:hover {
+  border-color: var(--danger);
 }
 
 ul {
