--- a/src/common/text-input/text-input.module.css
+++ b/src/common/text-input/text-input.module.css
@@ -1,4 +1,5 @@
 .inputWrapper {
+    width: 100%;
     padding: var(--s) 0;
     background-color: transparent;
 }
@@ -6,11 +7,12 @@
 .inputContainer {
     position: relative;
     display: flex;
+    
     align-items: center;
     justify-content: flex-start;
     background-color: var(--dim);
     border: 1px solid transparent;
-    border-radius: 0.75rem;
+    border-radius: var(--border-radius-s);
     padding: 0 var(--m);
     margin-top: var(--s);
 }
